--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,48 @@
 {
     "files.associations": {
-        "cstdlib": "cpp"
-    }
+        "cstdlib": "cpp",
+        "cstdint": "c"
+    },
+    "editor.hover.enabled": false,
+    "terminal.integrated.enableFileLinks": "off",
+    "editor.formatOnPaste": false,
+    "editor.formatOnSave": false,
+    "editor.formatOnType": false,
+    "editor.quickSuggestions": {
+        "other": false,
+        "comments": false,
+        "strings": false
+    },    
+    "editor.parameterHints.enabled": false,
+    "editor.suggest.snippetsPreventQuickSuggestions": false,
+    "html.suggest.html5": false,
+    "editor.snippetSuggestions": "none",    
+    "[c]": {
+        "editor.hover.enabled": false,
+        "editor.formatOnPaste": false,
+        "editor.formatOnSave": false,
+        "editor.formatOnType": false,
+        "editor.quickSuggestions": {
+            "other": false,
+            "comments": false,
+            "strings": false
+        },    
+        "editor.parameterHints.enabled": false,
+        "editor.suggest.snippetsPreventQuickSuggestions": false,
+        "editor.snippetSuggestions": "none",        
+    },
+    "[cpp]": {
+        "editor.hover.enabled": false,
+        "editor.formatOnPaste": false,
+        "editor.formatOnSave": false,
+        "editor.formatOnType": false,
+        "editor.quickSuggestions": {
+            "other": false,
+            "comments": false,
+            "strings": false
+        },
+        "editor.parameterHints.enabled": false,
+        "editor.suggest.snippetsPreventQuickSuggestions": false,
+        "editor.snippetSuggestions": "none",        
+    },
 }
